<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.example.catapp.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_fragment_home_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragment_saved"
        android:name="com.example.catapp.SavedFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_saved" />
    <fragment
        android:id="@+id/fragment_login"
        android:name="com.example.catapp.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_fragment_login_to_fragment_register"
            app:destination="@id/fragment_register" />
    </fragment>
    <fragment
        android:id="@+id/fragment_register"
        android:name="com.example.catapp.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.catapp.DetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="selected_cat_breed_id"
            app:argType="string" />
    </fragment>
</navigation>